// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

module.exports.fun = (): string => 'hello there!';

=====================================output=====================================
/* @flow */

module.exports.fun = (): string => "hello there!";

================================================================================
`;

exports[`CJS.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
module.exports = 42;

=====================================output=====================================
// @flow
module.exports = 42;

================================================================================
`;

exports[`test_absolute.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

// This will require ./node_modules/B.js.flow
var B1 = require('B');
(B1.fun(): string); // Error number ~> string

// This will require ./node_modules/B.js.flow
var B2 = require('B.js');
(B2.fun(): string); // Error number ~> string

var C = require('package_with_full_main');
(C.fun(): string); // Error number ~> string

var D = require('package_with_partial_main');
(D.fun(): string); // Error number ~> string

var E = require('package_with_no_package_json');
(E.fun(): string); // Error number ~> string

var F = require('package_with_dir_main');
(F.fun(): string); // Error number ~> string

=====================================output=====================================
/* @flow */

// This will require ./node_modules/B.js.flow
var B1 = require("B");
(B1.fun(): string); // Error number ~> string

// This will require ./node_modules/B.js.flow
var B2 = require("B.js");
(B2.fun(): string); // Error number ~> string

var C = require("package_with_full_main");
(C.fun(): string); // Error number ~> string

var D = require("package_with_partial_main");
(D.fun(): string); // Error number ~> string

var E = require("package_with_no_package_json");
(E.fun(): string); // Error number ~> string

var F = require("package_with_dir_main");
(F.fun(): string); // Error number ~> string

================================================================================
`;

exports[`test_relative.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

// This will require ./A.js.flow
var A1 = require('./A');
(A1.fun(): string); // Error number ~> string

// This will require ./A.js.flow
var A2 = require('./A.js');
(A2.fun(): string); // Error number ~> string

var CJS = require('./CJS.js');
(CJS: string);
(CJS: number); // Error: string ~> number

=====================================output=====================================
/* @flow */

// This will require ./A.js.flow
var A1 = require("./A");
(A1.fun(): string); // Error number ~> string

// This will require ./A.js.flow
var A2 = require("./A.js");
(A2.fun(): string); // Error number ~> string

var CJS = require("./CJS.js");
(CJS: string);
(CJS: number); // Error: string ~> number

================================================================================
`;
